--- a/example.env
+++ b/example.env
@@ -50,6 +50,8 @@ CYPRESS_BASE_URL=
 CYPRESS_LOGIN_USER=
 CYPRESS_LOGIN_PASSWORD=
 
-# Mailchimp optional to send notification emails (for API-service: currently only used for PHL ERA)
+# Mailchimp
 MC_API=
 MC_LIST_ID=
+# Enter segments in this specific format; current values are 'test segments', only replace on production-servers
+MC_SEGMENTS=ZMB:90286,UGA:102274,KEN:90702,ETH:90706,EGY:100810,PHL:105802,ZWE:105794
