refactor: remove unused code AB#9324 AB#9325

--- a/services/IBF-pipeline-floods/pipeline/secrets.py.template
+++ b/services/IBF-pipeline-floods/pipeline/secrets.py.template
@@ -1,18 +1,5 @@
-import os
-from settings import SETTINGS
-
 # Countries to include
-COUNTRY_CODES = list(
-    set(os.getenv('COUNTRIES').split(",")).intersection(SETTINGS))
-
-# DB Settings
-DB_SETTINGS = {
-    "password": os.getenv('DB_PASSWORD'),
-    "host": os.getenv('DB_HOST'),
-    "db": os.getenv('DB_DATABASE'),
-    "user": os.getenv('DB_USERNAME'),
-    "port": os.getenv('DB_PORT'),
-}
+COUNTRY_CODES = ['UGA','ETH','ZMB','KEN']
 
 # API-service access
 ADMIN_LOGIN = <fill_in>
