feat: add flood extent raster to mock AB#9333

--- a/services/API-service/.gitignore
+++ b/services/API-service/.gitignore
@@ -27,4 +27,5 @@ npm-debug.log*
 .npm
 
 # Raster-files
-geoserver-volume/raster-files/
+geoserver-volume/raster-files/*
+!geoserver-volume/raster-files/README.md
