--- a/nginx/conf.d/ibf.conf
+++ b/nginx/conf.d/ibf.conf
@@ -30,6 +30,7 @@ server {
         proxy_set_header X-SSL-Issuer     $ssl_client_i_dn;
         proxy_read_timeout 1800;
         proxy_connect_timeout 1800;
+        client_max_body_size 200M;
     }
 
     location /docs {
