--- a/example.env
+++ b/example.env
@@ -16,7 +16,7 @@ NODE_ENV=
 WATERPOINTDATA_TOKEN=
 # This password is only needed for production
 ADMIN_PASSWORD=
-COUNTRIES=UGA,ZMB,ETH,EGY,KEN,PHL,ZWE
+COUNTRIES=UGA,ZMB,ETH,EGY,PHL,ZWE
 
 # services/IBF-pipeline
 DASHBOARD_URL=
