docs: update handover guide AB#10573

--- a/handover.example.env
+++ b/handover.example.env
@@ -22,9 +22,9 @@ RESET_SECRET=
 ADMIN_PASSWORD=
 
 # Fill in one of the given values
-NODE_ENV=<test/production>
-PRODUCTION_DATA_SERVER=<yes/no> #Note: staging is not considered production here. This is about overwriting data upon release.
-NG_CONFIGURATION=<test/stage/production>
+NODE_ENV=production
+PRODUCTION_DATA_SERVER=yes
+NG_CONFIGURATION=production
 
 # Ask development team for needed credentials
 # Token used to acces the water point data at https://data.waterpointdata.org/profile/edit/developer_settings
