fix: create admin-user on startup AB#11211

--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -7,9 +7,9 @@
     "lint": "eslint \"**/*.ts\"",
     "fix:syntax": "npm run lint:syntax -- --write",
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
-    "prestart": "npm run migration:run",
+    "prestart": "npm run migration:run && ts-node src/scripts seed-prod",
     "start": "node index.js",
-    "prestart:dev": "npm run migration:run",
+    "prestart:dev": "npm run migration:run && ts-node src/scripts seed-prod",
     "start:dev": "npx tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
