--- a/example.env
+++ b/example.env
@@ -28,6 +28,7 @@ NG_IBF_SYSTEM_VERSION=
 NG_IBF_VIDEO_GUIDE_URL=
 NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=
 NG_APPLICATION_INSIGHTS_URL=
+SUPPORT_EMAIL_ADDRESS=
 
 # tools/deploy
 PRODUCTION_DATA_SERVER=<yes/no> #Note: staging is not considered production here. This is about overwriting data upon release.
