fix: add support email in dockerfile AB#11841

--- a/interfaces/IBF-dashboard/Dockerfile
+++ b/interfaces/IBF-dashboard/Dockerfile
@@ -40,4 +40,7 @@ ENV NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=$NG_APPLICATION_INSIGHTS_INSTRUM
 ARG NG_APPLICATION_INSIGHTS_URL
 ENV NG_APPLICATION_INSIGHTS_URL=$NG_APPLICATION_INSIGHTS_URL
 
+ARG SUPPORT_EMAIL_ADDRESS
+ENV SUPPORT_EMAIL_ADDRESS=$SUPPORT_EMAIL_ADDRESS
+
 RUN npm run build -- --prod --configuration $NG_CONFIGURATION
