--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -76,6 +76,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.3 >=4.0.0 <4.2.0"
+    "typescript": "^4.1.3 >=4.0.0 <4.2.0",
+    "xlsx": "^0.17.5"
   }
 }
