--- a/example.env
+++ b/example.env
@@ -18,6 +18,7 @@ WATERPOINTDATA_TOKEN=
 ADMIN_PASSWORD=
 DASHBOARD_URL=
 COUNTRIES=UGA,ZMB,ETH,EGY,PHL,ZWE
+DISASTER_TYPES=
 
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
