--- a/handover.example.env
+++ b/handover.example.env
@@ -1,6 +1,7 @@
 
 # Fill in countryCodeISO3's separated by comma's (if multiple), e.g.: ZMB
 COUNTRIES=
+DISASTER_TYPES=
 
 # Fill in Database credentials
 DB_TYPE=postgres
