--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
             - MC_API=${MC_API}
             - MC_LIST_ID=${MC_LIST_ID}
             - MC_SEGMENTS=${MC_SEGMENTS}
+            - SUPPORT_EMAIL_ADDRESS=${SUPPORT_EMAIL_ADDRESS}
         volumes:
             - api-root:/home/ibf/api-service
         networks:
