--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lighthouse": "^7.2.0",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1",
+    "prettier": "^2.6.2",
     "puppeteer": "^8.0.0"
   },
   "pre-commit": "lint"
