feat: add generic pdf link env AB#13510

--- a/example.env
+++ b/example.env
@@ -27,6 +27,7 @@ NG_USE_SERVICE_WORKER=
 NG_GEOSERVER_URL=
 NG_IBF_SYSTEM_VERSION=
 NG_IBF_VIDEO_GUIDE_URL=
+NG_IBF_PDF_GUIDE_URL=
 NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=
 NG_APPLICATION_INSIGHTS_URL=
 SUPPORT_EMAIL_ADDRESS=
