--- a/handover.example.env
+++ b/handover.example.env
@@ -31,6 +31,7 @@ NG_CONFIGURATION=production
 # Token used to acces the water point data at https://data.waterpointdata.org/profile/edit/developer_settings
 WATERPOINTDATA_TOKEN=
 NG_IBF_VIDEO_GUIDE_URL=
+NG_IBF_PDF_GUIDE_URL=
 
 # Fill in logging email address for nginx
 CERTBOT_EMAIL=
