feat: specify disaster-type / country combinations to load on server AB#13568

--- a/example.env
+++ b/example.env
@@ -18,7 +18,9 @@ WATERPOINTDATA_TOKEN=
 ADMIN_PASSWORD=
 DASHBOARD_URL=
 COUNTRIES=UGA,ZMB,ETH,EGY,PHL,ZWE
-DISASTER_TYPES=
+# If a disaster-type should not load for possible countries, then list the countries to load as in the example below
+# If no countries specified, then the disaster-type will load for all possible countries  
+DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,heavy-rain,dengue,malaria,drought,typhoon
 
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
