feat: add what's new link AB#13593

--- a/example.env
+++ b/example.env
@@ -33,6 +33,7 @@ NG_IBF_PDF_GUIDE_URL=
 NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=
 NG_APPLICATION_INSIGHTS_URL=
 SUPPORT_EMAIL_ADDRESS=
+WHATS_NEW_URL=
 
 # tools/deploy
 PRODUCTION_DATA_SERVER=<yes/no> #Note: staging is not considered production here. This is about overwriting data upon release.
