--- a/handover.example.env
+++ b/handover.example.env
@@ -32,6 +32,7 @@ NG_CONFIGURATION=production
 WATERPOINTDATA_TOKEN=
 NG_IBF_VIDEO_GUIDE_URL=
 NG_IBF_PDF_GUIDE_URL=
+WHATS_NEW_URL=
 
 # Fill in logging email address for nginx
 CERTBOT_EMAIL=
