--- a/interfaces/IBF-dashboard/Dockerfile
+++ b/interfaces/IBF-dashboard/Dockerfile
@@ -43,4 +43,7 @@ ENV NG_APPLICATION_INSIGHTS_URL=$NG_APPLICATION_INSIGHTS_URL
 ARG SUPPORT_EMAIL_ADDRESS
 ENV SUPPORT_EMAIL_ADDRESS=$SUPPORT_EMAIL_ADDRESS
 
+ARG WHATS_NEW_URL
+ENV WHATS_NEW_URL=$WHATS_NEW_URL
+
 RUN npm run build -- --prod --configuration $NG_CONFIGURATION
