fix: process pdf URL env AB#13612

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,6 @@ services:
       - MC_LIST_ID=${MC_LIST_ID}
       - MC_SEGMENTS=${MC_SEGMENTS}
       - SUPPORT_EMAIL_ADDRESS=${SUPPORT_EMAIL_ADDRESS}
-      - NG_IBF_VIDEO_GUIDE_URL=${NG_IBF_VIDEO_GUIDE_URL}
     volumes:
       - api-root:/home/ibf/api-service
     networks:
@@ -61,6 +60,7 @@ services:
         - NG_GEOSERVER_URL=${NG_GEOSERVER_URL}
         - NG_IBF_SYSTEM_VERSION=${NG_IBF_SYSTEM_VERSION}
         - NG_IBF_VIDEO_GUIDE_URL=${NG_IBF_VIDEO_GUIDE_URL}
+        - NG_IBF_PDF_GUIDE_URL=${NG_IBF_PDF_GUIDE_URL}
         - NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=${NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY}
         - NG_APPLICATION_INSIGHTS_URL=${NG_APPLICATION_INSIGHTS_URL}
         - SUPPORT_EMAIL_ADDRESS=${SUPPORT_EMAIL_ADDRESS}
@@ -73,6 +73,7 @@ services:
       - NG_GEOSERVER_URL=${NG_GEOSERVER_URL}
       - NG_IBF_SYSTEM_VERSION=${NG_IBF_SYSTEM_VERSION}
       - NG_IBF_VIDEO_GUIDE_URL=${NG_IBF_VIDEO_GUIDE_URL}
+      - NG_IBF_PDF_GUIDE_URL=${NG_IBF_PDF_GUIDE_URL}
       - NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=${NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY}
       - NG_APPLICATION_INSIGHTS_URL=${NG_APPLICATION_INSIGHTS_URL}
       - SUPPORT_EMAIL_ADDRESS=${SUPPORT_EMAIL_ADDRESS}
