--- a/interfaces/IBF-dashboard/Dockerfile
+++ b/interfaces/IBF-dashboard/Dockerfile
@@ -34,6 +34,9 @@ ENV NG_IBF_SYSTEM_VERSION=$NG_IBF_SYSTEM_VERSION
 ARG NG_IBF_VIDEO_GUIDE_URL
 ENV NG_IBF_VIDEO_GUIDE_URL=$NG_IBF_VIDEO_GUIDE_URL
 
+ARG NG_IBF_PDF_GUIDE_URL
+ENV NG_IBF_PDF_GUIDE_URL=$NG_IBF_PDF_GUIDE_URL
+
 ARG NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY
 ENV NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=$NG_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY
 
