feat: real EAP actions for ETH drought AB#13811

--- a/services/API-service/src/scripts/json/areas-of-focus.json
+++ b/services/API-service/src/scripts/json/areas-of-focus.json
@@ -33,5 +33,14 @@
     "id": "migration",
     "label": "Migration",
     "icon": "Internally-displaced.svg"
+  },
+  {"id": "food",
+    "label": "Food and nutrition impact",
+    "icon": "Livelihood.svg"
+  },
+  {
+    "id": "livestock",
+    "label": "Livestock health and production",
+    "icon": "Livestock.svg"
   }
 ]
