feat: set up basic whatsapp flow AB#14766

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,11 @@ services:
       - MC_LIST_ID=${MC_LIST_ID}
       - MC_SEGMENTS=${MC_SEGMENTS}
       - SUPPORT_EMAIL_ADDRESS=${SUPPORT_EMAIL_ADDRESS}
+      - TWILIO_SID=${TWILIO_SID}
+      - TWILIO_AUTHTOKEN=${TWILIO_AUTHTOKEN}
+      - TWILIO_MESSAGING_SID=${TWILIO_MESSAGING_SID}
+      - EXTERNAL_API_SERVICE_URL=${EXTERNAL_API_SERVICE_URL}
+      - TWILIO_WHATSAPP_NUMBER=${TWILIO_WHATSAPP_NUMBER}
     volumes:
       - api-root:/home/ibf/api-service
     networks:
