--- a/example.env
+++ b/example.env
@@ -59,3 +59,11 @@ MC_API=
 MC_LIST_ID=
 # Enter segments in this specific format; current values are 'test segments', only replace on production-servers
 MC_SEGMENTS=ZMB:90286,UGA:102274,KEN:90702,ETH:90706,EGY:100810,PHL:105802,ZWE:105794
+
+
+# Twilio
+EXTERNAL_API_SERVICE_URL=
+TWILIO_SID=
+TWILIO_AUTHTOKEN=
+TWILIO_MESSAGING_SID=
+TWILIO_WHATSAPP_NUMBER=+
