--- a/handover.example.env
+++ b/handover.example.env
@@ -49,6 +49,13 @@ NG_GEOSERVER_URL=
 NG_USE_SERVICE_WORKER=false
 NG_IBF_SYSTEM_VERSION=
 
+# Twilio - Only if using WhatsApp
+EXTERNAL_API_SERVICE_URL=
+TWILIO_SID=
+TWILIO_AUTHTOKEN=
+TWILIO_MESSAGING_SID=
+TWILIO_WHATSAPP_NUMBER=+
+
 
 
 
