--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -51,6 +51,7 @@
     "rxjs": "^6.6.3",
     "slug": "^4.0.2",
     "tsc-watch": "^4.6.0",
+    "twilio": "^3.83.1",
     "typeorm": "^0.2.30",
     "typescript": "^4.1.3",
     "wkt-io-ts": "^1.0.2"
