pass with no tests

--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -14,7 +14,7 @@
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
     "seed": "npx ts-node src/scripts seed-init",
-    "test": "jest --config=jest.json --detectOpenHandles --forceExit",
+    "test": "jest --config=jest.json --detectOpenHandles --forceExit --passWithNoTests",
     "test:dev": "npm test -- --watchAll",
     "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
