--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.4",
+    "@types/express": "^4.17.14",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "atob": ">=2.1.0",
