fix: api-service restarts after crashing AB#16240

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     networks:
       web-server-network:
       api-network:
+    restart: unless-stopped
 
   ibf-dashboard:
     build:
