--- a/example.env
+++ b/example.env
@@ -62,7 +62,7 @@ MC_SEGMENTS=ZMB:90286,UGA:102274,KEN:90702,ETH:90706,EGY:100810,PHL:105802,ZWE:1
 
 
 # Twilio
-EXTERNAL_API_SERVICE_URL=
+EXTERNAL_API_SERVICE_URL= #end with slash
 TWILIO_SID=
 TWILIO_AUTHTOKEN=
 TWILIO_MESSAGING_SID=
