--- a/handover.example.env
+++ b/handover.example.env
@@ -50,7 +50,7 @@ NG_USE_SERVICE_WORKER=false
 NG_IBF_SYSTEM_VERSION=
 
 # Twilio - Only if using WhatsApp
-EXTERNAL_API_SERVICE_URL=
+EXTERNAL_API_SERVICE_URL= #end with slash
 TWILIO_SID=
 TWILIO_AUTHTOKEN=
 TWILIO_MESSAGING_SID=
