--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^6.11.11",
     "@nestjs/microservices": "^6.11.11",
     "@nestjs/platform-express": "^6.11.11",
+    "@nestjs/schedule": "^0.4.3",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/terminus": "^6.5.6",
     "@nestjs/testing": "^6.11.11",
