feat:  aof + inclusion labels AB#17179 AB#17180

--- a/services/API-service/src/scripts/json/areas-of-focus.json
+++ b/services/API-service/src/scripts/json/areas-of-focus.json
@@ -31,7 +31,7 @@
   },
   {
     "id": "inclusion",
-    "label": "Inclusion, Gender & Protection",
+    "label": "Protection, Gender and Inclusion",
     "description": "Inclusion, Gender & Protection description",
     "icon": "Gender.svg"
   },
