fix: add drr icon AB#17344

--- a/services/API-service/src/scripts/json/areas-of-focus.json
+++ b/services/API-service/src/scripts/json/areas-of-focus.json
@@ -3,7 +3,7 @@
     "id": "drr",
     "label": "Disaster Risk Reduction",
     "description": "(DRR) is a systematic approach to identifying, assessing and reducing the risks of disaster.<br><br>It aims to reduce socio-economic vulnerabilities to disaster as well as dealing with the environmental and other hazards that trigger them.",
-    "icon": "Shelter.svg"
+    "icon": "Disaster risk reduction.svg"
   },
   {
     "id": "shelter",
