--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -77,6 +77,7 @@
     "ts-jest": "^24.3.0",
     "ts-node": "~9.1.1",
     "tsconfig-paths": "^3.9.0",
+    "xlsx": "^0.18.5",
     "yargs": "^17.0.0"
   }
 }
