--- a/example.env
+++ b/example.env
@@ -22,6 +22,9 @@ COUNTRIES=UGA,ZMB,ETH,EGY,PHL,ZWE
 # If no countries specified, then the disaster-type will load for all possible countries  
 DISASTER_TYPES=floods:UGA-ZMB-ETH-KEN,heavy-rain,dengue,malaria,drought,typhoon
 
+# IBF-geoserver
+GEOSERVER_ADMIN_PASSWORD=
+
 # interfaces/IBF-dashboard
 NG_CONFIGURATION=
 NG_API_URL=
