fix: fix geoserver version AB#19104

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ services:
       web-server-network:
 
   ibf-geoserver:
-    image: kartoza/geoserver
+    image: kartoza/geoserver:2.19.2
     environment:
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
       - JAVA_OPTS="-DALLOW_ENV_PARAMETRIZATION=true"
