--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -37,6 +37,7 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@ionic/angular": "^5.2.3",
     "@microsoft/applicationinsights-web": "^2.5.11",
+    "@ngrx/effects": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
