feat: enable gzip on static files AB#19925

--- a/nginx/conf.d/ibf.conf
+++ b/nginx/conf.d/ibf.conf
@@ -15,6 +15,18 @@ server {
     root /var/www/ibf-dashboard;
     index index.html;
 
+    ##
+    # Gzip Settings
+    ##
+
+    # Dynamic mode.
+    gzip on;
+    gzip_comp_level 9;
+    gzip_types text/plain text/css application/javascript application/json image/svg+xml application/xml+rss;
+
+    # Static mode.
+    gzip_static on;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
