fix: put back command AB#19925

--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -16,7 +16,7 @@
     "postbuild:prod": "npm run compress",
     "prebuild": "npm run set-env-variables",
     "prestart": "npm install --no-optional --no-audit --no-fund",
-    "serve:static": "npx http-server www/ -c-1 --gzip",
+    "serve:static": "cp www/index.html www/404.html && npx http-server www/ -c-1 --gzip",
     "set-env-variables": "node ./_set-env-variabes.js",
     "start": "ng serve --port=4200 --host=0.0.0.0 --disable-host-check",
     "start:no-install": "ng serve --port=4200 --host=0.0.0.0 --disable-host-check",
