--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.0.1",
     "gzipper": "^7.2.0",
     "leaflet": "^1.6.0",
+    "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.markercluster": "^1.4.1",
     "luxon": "^1.26.0",
     "rxjs": "~6.6.0",
@@ -63,6 +64,7 @@
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.21",
+    "@types/leaflet.featuregroup.subgroup": "^1.0.0",
     "@types/leaflet.markercluster": "^1.4.3",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.0.22",
