--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "ng build",
-    "build:prod": "npm run build -- --prod",
+    "build:prod": "npm run build -- --configuration production",
     "compress": "gzipper compress --skip-compressed --remove-larger --gzip --gzip-level 9 ./www/",
     "e2e": "ng e2e",
     "format:fix": "npm run format:check -- --write",
@@ -27,13 +27,13 @@
     "postinstall": "ngcc --tsconfig \"tsconfig.json\""
   },
   "dependencies": {
-    "@angular/common": "~11.1.1",
-    "@angular/core": "~11.1.1",
-    "@angular/forms": "~11.1.1",
-    "@angular/platform-browser": "~11.1.1",
-    "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "~11.1.1",
-    "@angular/service-worker": "~11.1.1",
+    "@angular/common": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
+    "@angular/service-worker": "~12.2.17",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@asymmetrik/ngx-leaflet-markercluster": "^5.0.1",
     "@auth0/angular-jwt": "^5.0.1",
@@ -53,11 +53,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.2",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler": "~11.1.1",
-    "@angular/compiler-cli": "~11.1.1",
-    "@angular/language-service": "~11.2.3",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@ionic/angular-toolkit": "^3.1.0",
     "@ionic/cli": "^6.12.4",
     "@types/jasmine": "~3.6.2",
@@ -79,7 +79,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.3 >=4.0.0 <4.2.0",
+    "typescript": "^4.3.5",
     "xlsx": "^0.17.5"
   }
 }
