--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -9,7 +9,7 @@
     "lint:syntax": "prettier --check \"**/*.{md,js,ts,scss,html}\" ",
     "prestart": "npm run migration:run && ts-node src/scripts seed-prod",
     "start": "node index.js",
-    "prestart:dev": "ts-node src/scripts seed-prod",
+    "prestart:dev": "npm run migration:run && ts-node src/scripts seed-prod",
     "start:dev": "npx tsc-watch --onSuccess \"  node index.js  \" --onFailure \"echo There was a problem with the build!\" -p tsconfig.json",
     "prestart:prod": "tsc",
     "start:prod": "node dist/main.js",
@@ -51,6 +51,7 @@
     "rxjs": "^7.2.0",
     "slug": "^4.0.2",
     "twilio": "^3.83.1",
+    "tsc-watch": "^6.0.0",
     "typeorm": "^0.3.6",
     "typescript": "^4.7.4",
     "wkt-io-ts": "^1.0.2"
@@ -76,7 +77,6 @@
     "swagger-ui-express": "^4.0.6",
     "ts-jest": "^24.3.0",
     "ts-node": "^10.9.1",
-    "tsc-watch": "^6.0.0",
     "tsconfig-paths": "^3.9.0",
     "xlsx": "^0.18.5",
     "yargs": "^17.0.0"
