fix: no recompile on save AB#23131

--- a/services/API-service/tsconfig.json
+++ b/services/API-service/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": "./",
     "skipLibCheck": true
   },
+  "watchOptions": { "watchFile": "fixedPollingInterval" },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "types": ["jest"],
