--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -63,7 +63,7 @@
     "deep-extend": ">=0.5.1",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest": "26.x",
     "eslint-plugin-prettier": "^3.3.1",
     "extend": ">=3.0.2",
     "jest": "^24.9.0",
