--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -33,6 +33,7 @@
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/testing": "^10.1.3",
     "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.4.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
