--- a/interfaces/IBF-dashboard/package.json
+++ b/interfaces/IBF-dashboard/package.json
@@ -49,11 +49,17 @@
     "leaflet.markercluster": "^1.4.1",
     "luxon": "^1.26.0",
     "rxjs": "~6.6.0",
+    "tsconfig": "^7.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.11",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.11",
     "@angular/compiler": "~13.4.0",
     "@angular/compiler-cli": "~13.4.0",
@@ -65,7 +71,9 @@
     "@types/leaflet.markercluster": "^1.4.3",
     "@types/luxon": "^1.26.2",
     "@types/node": "^14.0.22",
-    "codelyzer": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "^8.17.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.1.0",
@@ -77,7 +85,6 @@
     "prettier-plugin-organize-imports": "^2.3.4",
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
-    "tslint": "~6.1.0",
     "typescript": "^4.6.4",
     "xlsx": "^0.17.5"
   }
