--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx:
     image: staticfloat/nginx-certbot
@@ -13,7 +11,7 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/user.conf.d
       - ibf-dashboard-root:/var/www/ibf-dashboard
-      - letsencrypt:/etc/letsencrypt
+      - ./nginx/letsencrypt:/etc/letsencrypt
     networks:
       web-server-network:
     restart: unless-stopped
@@ -49,7 +47,8 @@ services:
       - TWILIO_WHATSAPP_NUMBER=${TWILIO_WHATSAPP_NUMBER}
       - NG_API_URL=${NG_API_URL}
     volumes:
-      - api-root:/home/ibf/api-service
+      - 'api_service_node_modules:/home/ibf/api-service/node_modules'
+      - ./services/API-service:/home/ibf/api-service
     networks:
       web-server-network:
       api-network:
@@ -94,8 +93,8 @@ services:
       - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
       - JAVA_OPTS="-DALLOW_ENV_PARAMETRIZATION=true"
     volumes:
-      - api-geoserver-files:/opt/geoserver/data_dir/workspaces/ibf-system/ibf-pipeline
-      - api-geoserver-workspace:/opt/geoserver/data_dir/workspaces/ibf-system
+      - ./services/API-service/geoserver-volume/raster-files:/opt/geoserver/data_dir/workspaces/ibf-system/ibf-pipeline
+      - ./services/API-service/geoserver-volume/geoserver-layers:/opt/geoserver/data_dir/workspaces/ibf-system
       - ./.env:/opt/geoserver/data_dir/geoserver-environment.properties
     networks:
       web-server-network:
@@ -104,26 +103,7 @@ services:
 
 volumes:
   ibf-dashboard-root:
-  api-root:
-    driver_opts:
-      type: bind
-      device: ./services/API-service
-      o: bind
-  api-geoserver-files:
-    driver_opts:
-      type: bind
-      device: ./services/API-service/geoserver-volume/raster-files
-      o: bind
-  api-geoserver-workspace:
-    driver_opts:
-      type: bind
-      device: ./services/API-service/geoserver-volume/geoserver-layers
-      o: bind
-  letsencrypt:
-    driver_opts:
-      type: bind
-      device: ./nginx/letsencrypt
-      o: bind
+  api_service_node_modules:
 
 networks:
   web-server-network:
