fix: nestjs upgrade leftover AB#23356

--- a/services/API-service/tsconfig.json
+++ b/services/API-service/tsconfig.json
@@ -18,7 +18,11 @@
     "baseUrl": "./",
     "skipLibCheck": true
   },
-  "watchOptions": { "watchFile": "fixedPollingInterval" },
+  "watchOptions": { 
+    "watchFile": "fixedPollingInterval",
+    "excludeDirectories": ["node_modules", "dist"],
+    "excludeFiles": ["**/*.json"]
+  },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"],
   "types": ["jest"],
