--- a/services/API-service/package.json
+++ b/services/API-service/package.json
@@ -18,7 +18,7 @@
     "test:dev": "npm test -- --watchAll",
     "test:coverage": "npm test -- --coverage --coverageDirectory=coverage",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm migration:generate -- -d ./appdatasource.ts -n",
+    "migration:generate": "npm run typeorm migration:generate -- -d ./appdatasource.ts",
     "migration:run": "npm run typeorm migration:run -- -d ./appdatasource.ts",
     "migration:revert": "npm run typeorm migration:revert -- -d ./appdatasource.ts"
   },
