--- a/interfaces/IBF-dashboard/.eslintrc.json
+++ b/interfaces/IBF-dashboard/.eslintrc.json
@@ -17,7 +17,12 @@
         "plugin:@typescript-eslint/recommended"
       ],
       "rules": {
-        "@angular-eslint/component-class-suffix": "off",
+        "@angular-eslint/component-class-suffix": [
+          "error",
+          {
+            "suffixes": ["Page", "Component"]
+          }
+        ],
         "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/no-empty-function": "off"
       }
